Outline integration improvement